--- a/development.ini
+++ b/development.ini
@@ -10,6 +10,9 @@ debug = true
 smtp_server = localhost
 error_email_from = paste@localhost
 
+##DATA_ROOT = "/home/
+TEMP_DIR = /home/ffs/_temp_
+
 [server:main]
 use = egg:Paste#http
 host = 127.0.0.1
