--- a/development.ini
+++ b/development.ini
@@ -10,8 +10,7 @@ debug = true
 smtp_server = localhost
 error_email_from = paste@localhost
 
-##DATA_ROOT = "/home/
-TEMP_DIR = /home/ffs/_temp_
+
 
 [server:main]
 use = egg:Paste#http
@@ -26,6 +25,9 @@ static_files = true
 cache_dir = %(here)s/data
 beaker.session.key = fgx_ajax_server
 beaker.session.secret = ThisIsAnotherSecret
+
+##DATA_ROOT = "/home/
+TEMP_DIR = /home/ffs/_temp_/
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
